tested view height fix for chrome browsers on mobile

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -11,6 +11,7 @@ body {
   margin: 0;
 }
 .App {
+  min-height: 100vh;
   max-width: 100%;
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
